# LaneSentry

./: README.md  main.py  pyproject.toml
api/: EmailSend.py  model_inference.py
